# 4CID_bot

./: README.md  main.py  pyproject.toml
scripts/: seqPreview.wsd
